force-app/main/default/objects/Leak_Rule__mdt/Leak_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Leak Rule</label>
    <pluralLabel>Leak Rules</pluralLabel>
</CustomObject>