force-app/main/default/objects/Leak_Rule__mdt/fields/Critical_Value_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Critical_Value_Threshold__c</fullName>
    <description>Estimated value at or above which a leak is severity Critical.</description>
    <label>Critical Value Threshold</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>