force-app/main/default/objects/Leak_Rule__mdt/fields/Threshold_Days__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Days__c</fullName>
    <description>Business days past the SLA before a leak is flagged.</description>
    <label>Threshold Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>